Fix h1 alignment

--- a/front-end/src/pages/Account.css
+++ b/front-end/src/pages/Account.css
@@ -73,6 +73,9 @@ section {
 }
 
 .accountDashboard .listings {
-	grid-column: 2;
-	grid-row: 1 / 2;
+	gap: 1em;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-self: center;
 }
